--- a/DarkModeFlipper/public/index.html
+++ b/DarkModeFlipper/public/index.html
@@ -4,29 +4,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>ColorFlipper</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="index.js"></script>
   </head>
-  <body id="colorFlipperBody" style="background-color: #333">
-    <div class="container">
-      <div class="mode-container">
-        <h1 id="colorFlipperH1">Mode => Dark</h1>
+  <body id="body">
+    <div class="box-1">
+      <div id="box-2" class="box-2">
+        <h1 id="heading">Mode = Dark</h1>
+      </div>
+      <br>
         <button
-          id="colorFlipperButton"
-          name="clickMe"
+          id="button"
+          class="btn"
           type="button"
           onclick="changeMode();"
-          style="background-color: #f5f5dc"
         >
           CHANGE MODE
         </button>
-      </div>
     </div>
   </body>
 </html>
