--- a/CoffeeCounter/public/index.html
+++ b/CoffeeCounter/public/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     
-    <div id="coffeeJumbo" class="jumbotron jumbotron-fluid">
+    <div id="jumbo" class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4">Coffee Counter</h1>
         <p class="lead">Count the cups of coffee you consume each day...</p>
